# konto

./: .gitignore  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  decisions.md  index.html
backend/: .env.example  Cargo.toml
backend/crates/konto-api/: Cargo.toml
backend/crates/konto-api/src/: lib.rs  state.rs
backend/crates/konto-api/src/dto/: account.rs  activity_type.rs  annual_report.rs  audit.rs  auth.rs  bank_transaction.rs  contact.rs  contact_person.rs  contact_relationship.rs  contact_tag.rs  credit_note.rs  currency.rs  dashboard_charts.rs  default_account.rs  document.rs  dunning.rs  email.rs  email_template.rs  employee.rs  exchange_rate.rs  expense.rs  fiscal_year.rs  fixed_asset.rs  import.rs  invoice.rs  invoice_payment.rs  journal.rs  journal_attachment.rs  mod.rs  payout_entry.rs  payroll_run.rs  payroll_settings.rs  project.rs  project_activity_type.rs  project_budget.rs  project_document.rs  project_item.rs  project_member.rs  project_milestone.rs  project_sub_status.rs  (+10 more)
backend/crates/konto-api/src/handlers/: account_handler.rs  activity_type_handler.rs  annual_report_handler.rs  audit_handler.rs  auth_handler.rs  bank_account_handler.rs  bank_transaction_handler.rs  contact_handler.rs  contact_person_handler.rs  contact_relationship_handler.rs  contact_sub_handler.rs  contact_tag_handler.rs  contact_vat_handler.rs  credit_note_handler.rs  currency_handler.rs  dashboard_charts_handler.rs  default_account_handler.rs  document_handler.rs  dunning_handler.rs  email_handler.rs  email_template_handler.rs  employee_handler.rs  exchange_rate_handler.rs  expense_category_handler.rs  expense_handler.rs  expense_receipt_handler.rs  fiscal_year_handler.rs  fixed_asset_handler.rs  import_handler.rs  invoice_handler.rs  journal_attachment_handler.rs  journal_handler.rs  mod.rs  payout_handler.rs  payroll_run_handler.rs  payroll_settings_handler.rs  project_activity_type_handler.rs  project_document_handler.rs  project_handler.rs  project_item_handler.rs  (+14 more)
backend/crates/konto-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  upload.rs
backend/crates/konto-common/: Cargo.toml
backend/crates/konto-common/src/: config.rs  enums.rs  error.rs  lib.rs  markdown.rs  pagination.rs  tests.rs  types.rs
backend/crates/konto-core/: Cargo.toml
backend/crates/konto-core/src/: lib.rs  tests.rs
backend/crates/konto-core/src/auth/: jwt.rs  mod.rs  password.rs  rbac.rs
backend/crates/konto-core/src/import/: accounts_csv.rs  contacts_csv.rs  contacts_import.rs  import_service.rs  journal_xlsx.rs  mod.rs  projects_xlsx.rs  time_entries_csv.rs
backend/crates/konto-core/src/services/: account_service.rs  activity_type_service.rs  annual_report_note_service.rs  annual_report_service.rs  audit_service.rs  auth_service.rs  bank_account_service.rs  bank_import_service.rs  bank_reconciliation_service.rs  cash_flow_service.rs  ch_account_groups.rs  contact_relationship_service.rs  contact_service.rs  credit_note_service.rs  credit_note_workflow.rs  currency_service.rs  dashboard_charts_service.rs  dashboard_service.rs  default_account_service.rs  depreciation_service.rs  document_service.rs  document_workflow.rs  dunning_service.rs  email_service.rs  email_template_service.rs  employee_service.rs  employee_user_link_service.rs  exchange_rate_service.rs  expense_category_service.rs  expense_receipt_service.rs  expense_service.rs  expense_workflow.rs  export_service.rs  fiscal_year_service.rs  fixed_asset_service.rs  invoice_service.rs  invoice_workflow.rs  journal_attachment_service.rs  journal_service.rs  language.rs  (+44 more)
backend/crates/konto-db/: Cargo.toml
backend/crates/konto-db/src/: connection.rs  lib.rs  repository.rs
backend/crates/konto-db/src/entities/: account.rs  activity_type.rs  annual_report.rs  annual_report_note.rs  audit_log.rs  bank_account.rs  bank_transaction.rs  company_setting.rs  contact.rs  contact_person.rs  contact_relationship.rs  contact_tag.rs  contact_tag_assignment.rs  credit_note.rs  credit_note_line.rs  currency.rs  default_account.rs  depreciation_entry.rs  (+43 more)
backend/crates/konto-migration/: Cargo.toml
backend/crates/konto-migration/src/: lib.rs  m20240101_000001_create_tables.rs  m20240101_000002_create_accounting.rs  m20240101_000003_create_contacts.rs  m20240101_000004_create_projects.rs  m20240101_000005_create_import.rs  m20240101_000006_seed_data.rs  m20240101_000007_add_account_description.rs  m20240101_000008_create_fiscal_exchange.rs  m20240101_000009_seed_vat_codes.rs  m20240101_000010_create_invoices.rs  m20240101_000011_create_settings.rs  m20240101_000012_create_templates.rs  m20240101_000013_create_documents.rs  m20240101_000014_add_invoice_template.rs  m20240101_000015_seed_templates.rs  m20240101_000016_create_email_settings.rs  m20240101_000017_create_recurring_invoices.rs  m20240101_000018_create_credit_notes.rs  m20240101_000019_create_dunning.rs  m20240101_000020_create_expenses.rs  m20240101_000021_create_bank_transactions.rs  m20240101_000022_create_email_templates.rs  m20240101_000023_create_contact_tags.rs  m20240101_000026_add_time_entry_billed.rs  m20240101_000027_create_invoice_payments.rs  m20240101_000028_create_default_accounts.rs  m20240101_000029_create_journal_attachments.rs  m20240101_000030_unified_expenses.rs  m20240101_000031_company_settings_locale.rs  m20240101_000032_company_settings_jurisdiction.rs  m20240101_000033_create_shareholders.rs  m20240101_000034_create_annual_report_notes.rs  m20240101_000035_create_annual_reports.rs  m20240101_000036_seed_shareholders.rs  m20240101_000037_alter_notes_ordering.rs  m20240101_000038_add_audit_optout.rs  m20240101_000039_fix_journal_attachment_fk.rs  m20240101_000040_add_multilang_fields.rs  m20240101_000041_add_user_language.rs  (+47 more)
backend/crates/konto-server/: Cargo.toml
backend/crates/konto-server/src/: lib.rs  main.rs  openapi.rs  router.rs  startup.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  server.rs
(+406 files in other folders)
