[workspace]
members = [
    "crates/konto-common",
    "crates/konto-migration",
    "crates/konto-db",
    "crates/konto-core",
    "crates/konto-api",
    "crates/konto-server",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "warn"

[workspace.package]
version = "0.1.0-beta.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-rust_decimal"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# OpenAPI
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Import
calamine = "0.26"
csv = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# PDF generation
typst = "0.14"
typst-as-lib = { version = "0.15", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14"
qrcode = { version = "0.14", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }

# Traits
async-trait = "0.1"

# Error
thiserror = "2"
anyhow = "1"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }

# XML parsing
quick-xml = "0.37"

# ZIP
zip = { version = "2", default-features = false, features = ["deflate"] }

# Internal crates
konto-common = { path = "crates/konto-common" }
konto-migration = { path = "crates/konto-migration" }
konto-db = { path = "crates/konto-db" }
konto-core = { path = "crates/konto-core" }
konto-api = { path = "crates/konto-api" }
