[package]
name = "maravilla-konto"
version = "0.1.0-beta.2"
edition = "2024"
description = "Maravilla Konto - Swiss Accounting"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
window-vibrancy = "0.7"

# Backend crates (path deps)
konto-server = { path = "../backend/crates/konto-server" }
konto-common = { path = "../backend/crates/konto-common" }
konto-core = { path = "../backend/crates/konto-core" }
konto-api = { path = "../backend/crates/konto-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File I/O
rand = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
