[package]
name = "konto-api"
version.workspace = true
edition.workspace = true

[dependencies]
konto-common = { workspace = true }
konto-core = { workspace = true }
konto-db = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true
