[package]
name = "konto-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
